#2121 fix many issues with password modal        - top position regarding FUN header        - close button was misplaced        - z-index was incorret regarding other modals (menu and login)        - width and padding        - one i18n string was incorrect

--- a/funsite/static/funsite/css/fun.css
+++ b/funsite/static/funsite/css/fun.css
@@ -140,7 +140,7 @@ a.no-decoration:visited {
     display: none;
     top: 60px;
     right: 0;
-    z-index: 2000;
+    z-index: 900;  /* bootstrap modal z-index is 1050 */
 }
 
 #login-overlay div.content {
@@ -1811,3 +1811,10 @@ div.article {
     }
 }
 
+#modal-forget-password .modal-content {
+    top: 70px;
+    padding: 10px;
+}
+.modal {
+    z-index: 4000; /* bootstrap modal has to overtake ours */
+}
